# fastapi-marketplace

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 46f53ffc7ada_create_users_table.py  9b7f6d8c1234_create_stores_table.py  a3b7d1f4c9e2_create_product_images_table.py  b2f4a6c8d9e1_create_cart_items_table.py  bd59657022d3_initial_migration.py  c1e4a2b7d901_add_product_count_to_stores.py  c4d7e1a9b2f3_create_orders_tables.py  d1e4f6a8b0c2_create_addresses_table.py  e4f81a2d1c2b_create_categories_table.py  e8f2a4b6c1d3_create_reviews_table.py  f1b2c3d4e5f6_update_addresses_for_delivery_profile.py  f7a9c3d2b6e1_create_products_table.py
app/: cache.py  config.py  database.py  exception_handler.py  exceptions.py  main.py  worker.py
app/dependencies/: address.py  auth.py  cart.py  category.py  orders.py  product.py  product_image.py  review.py  roles.py  services.py  store.py
app/middleware/: logging.py  request_id.py
app/models/: address.py  base.py  cart_item.py  category.py  order.py  order_item.py  product.py  product_image.py  review.py  store.py  user.py
app/repositories/: address.py  cart.py  category.py  order.py  product.py  review.py  store.py  user.py
app/router/: health.py
app/routers/: addresses.py  admin.py  auth.py  cart.py  categories.py  health.py  orders.py  (+4 more)
scripts/: start-api.sh
tests/: conftest.py  factories.py  test_auth.py  test_cart.py  test_orders.py  test_products.py  test_reviews.py  test_stores.py
(+26 files in other folders)
